syntax = "proto3";
package proto;

option go_package = "github.com/KennedySurianto/MICROSERVICE_GPT/proto;proto";

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
}
